Fixed the dropdown and the mobile side menu for the navigation bar.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,131 @@ tutoring_site/tutoring_site/__pycache__/settings.cpython-35.pyc
 tutoring_site/tutoring_site/__pycache__/urls.cpython-35.pyc
 tutoring_site/tutoring_site/__pycache__/wsgi.cpython-35.pyc
 tutoring_site/tutoring_site/__pycache__/views.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/static/img/logo.png
+tutoring_site/static/admin/fonts/README.txt
+tutoring_site/static/admin/css/autocomplete.css
+tutoring_site/static/admin/css/base.css
+tutoring_site/static/admin/css/changelists.css
+tutoring_site/static/admin/css/dashboard.css
+tutoring_site/static/admin/css/fonts.css
+tutoring_site/static/admin/css/forms.css
+tutoring_site/static/admin/css/login.css
+tutoring_site/static/admin/css/responsive.css
+tutoring_site/static/admin/css/responsive_rtl.css
+tutoring_site/static/admin/css/rtl.css
+tutoring_site/static/admin/css/widgets.css
+tutoring_site/static/admin/css/vendor/select2/LICENSE-SELECT2.md
+tutoring_site/static/admin/css/vendor/select2/select2.css
+tutoring_site/static/admin/css/vendor/select2/select2.min.css
+tutoring_site/static/admin/fonts/LICENSE.txt
+tutoring_site/static/admin/img/LICENSE
+tutoring_site/static/admin/fonts/Roboto-Bold-webfont.woff
+tutoring_site/static/admin/fonts/Roboto-Light-webfont.woff
+tutoring_site/static/admin/fonts/Roboto-Regular-webfont.woff
+tutoring_site/static/admin/js/vendor/xregexp/xregexp.min.js
+tutoring_site/static/admin/img/calendar-icons.svg
+tutoring_site/static/admin/img/icon-addlink.svg
+tutoring_site/static/admin/img/icon-alert.svg
+tutoring_site/static/admin/img/icon-calendar.svg
+tutoring_site/static/admin/img/icon-changelink.svg
+tutoring_site/static/admin/img/icon-clock.svg
+tutoring_site/static/admin/img/icon-deletelink.svg
+tutoring_site/static/admin/img/icon-no.svg
+tutoring_site/static/admin/img/icon-unknown.svg
+tutoring_site/static/admin/img/icon-unknown-alt.svg
+tutoring_site/static/admin/img/icon-yes.svg
+tutoring_site/static/admin/img/inline-delete.svg
+tutoring_site/static/admin/img/search.svg
+tutoring_site/static/admin/img/selector-icons.svg
+tutoring_site/static/admin/img/sorting-icons.svg
+tutoring_site/static/admin/img/tooltag-add.svg
+tutoring_site/static/admin/img/tooltag-arrowright.svg
+tutoring_site/static/admin/img/gis/move_vertex_off.svg
+tutoring_site/static/admin/img/gis/move_vertex_on.svg
+tutoring_site/static/admin/js/SelectBox.js
+tutoring_site/static/admin/js/SelectFilter2.js
+tutoring_site/static/admin/js/actions.js
+tutoring_site/static/admin/js/actions.min.js
+tutoring_site/static/admin/js/autocomplete.js
+tutoring_site/static/admin/js/calendar.js
+tutoring_site/static/admin/js/cancel.js
+tutoring_site/static/admin/js/change_form.js
+tutoring_site/static/admin/js/collapse.js
+tutoring_site/static/admin/js/collapse.min.js
+tutoring_site/static/admin/js/core.js
+tutoring_site/static/admin/js/inlines.js
+tutoring_site/static/admin/js/inlines.min.js
+tutoring_site/static/admin/js/jquery.init.js
+tutoring_site/static/admin/js/popup_response.js
+tutoring_site/static/admin/js/prepopulate.js
+tutoring_site/static/admin/js/prepopulate.min.js
+tutoring_site/static/admin/js/prepopulate_init.js
+tutoring_site/static/admin/js/timeparse.js
+tutoring_site/static/admin/js/urlify.js
+tutoring_site/static/admin/js/admin/DateTimeShortcuts.js
+tutoring_site/static/admin/js/admin/RelatedObjectLookups.js
+tutoring_site/static/admin/js/vendor/jquery/LICENSE-JQUERY.txt
+tutoring_site/static/admin/js/vendor/jquery/jquery.js
+tutoring_site/static/admin/js/vendor/jquery/jquery.min.js
+tutoring_site/static/admin/js/vendor/select2/LICENSE-SELECT2.md
+tutoring_site/static/admin/js/vendor/select2/select2.full.js
+tutoring_site/static/admin/js/vendor/select2/select2.full.min.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ar.js
+tutoring_site/static/admin/js/vendor/select2/i18n/az.js
+tutoring_site/static/admin/js/vendor/select2/i18n/bg.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ca.js
+tutoring_site/static/admin/js/vendor/select2/i18n/cs.js
+tutoring_site/static/admin/js/vendor/select2/i18n/da.js
+tutoring_site/static/admin/js/vendor/select2/i18n/de.js
+tutoring_site/static/admin/js/vendor/select2/i18n/el.js
+tutoring_site/static/admin/js/vendor/select2/i18n/en.js
+tutoring_site/static/admin/js/vendor/select2/i18n/es.js
+tutoring_site/static/admin/js/vendor/select2/i18n/et.js
+tutoring_site/static/admin/js/vendor/select2/i18n/eu.js
+tutoring_site/static/admin/js/vendor/select2/i18n/fa.js
+tutoring_site/static/admin/js/vendor/select2/i18n/fi.js
+tutoring_site/static/admin/js/vendor/select2/i18n/fr.js
+tutoring_site/static/admin/js/vendor/select2/i18n/gl.js
+tutoring_site/static/admin/js/vendor/select2/i18n/he.js
+tutoring_site/static/admin/js/vendor/select2/i18n/hi.js
+tutoring_site/static/admin/js/vendor/select2/i18n/hr.js
+tutoring_site/static/admin/js/vendor/select2/i18n/hu.js
+tutoring_site/static/admin/js/vendor/select2/i18n/id.js
+tutoring_site/static/admin/js/vendor/select2/i18n/is.js
+tutoring_site/static/admin/js/vendor/select2/i18n/it.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ja.js
+tutoring_site/static/admin/js/vendor/select2/i18n/km.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ko.js
+tutoring_site/static/admin/js/vendor/select2/i18n/lt.js
+tutoring_site/static/admin/js/vendor/select2/i18n/lv.js
+tutoring_site/static/admin/js/vendor/select2/i18n/mk.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ms.js
+tutoring_site/static/admin/js/vendor/select2/i18n/nb.js
+tutoring_site/static/admin/js/vendor/select2/i18n/nl.js
+tutoring_site/static/admin/js/vendor/select2/i18n/pl.js
+tutoring_site/static/admin/js/vendor/select2/i18n/pt.js
+tutoring_site/static/admin/js/vendor/select2/i18n/pt-BR.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ro.js
+tutoring_site/static/admin/js/vendor/select2/i18n/ru.js
+tutoring_site/static/admin/js/vendor/select2/i18n/sk.js
+tutoring_site/static/admin/js/vendor/select2/i18n/sr.js
+tutoring_site/static/admin/js/vendor/select2/i18n/sr-Cyrl.js
+tutoring_site/static/admin/js/vendor/select2/i18n/sv.js
+tutoring_site/static/admin/js/vendor/select2/i18n/th.js
+tutoring_site/static/admin/js/vendor/select2/i18n/tr.js
+tutoring_site/static/admin/js/vendor/select2/i18n/uk.js
+tutoring_site/static/admin/js/vendor/select2/i18n/vi.js
+tutoring_site/static/admin/js/vendor/select2/i18n/zh-CN.js
+tutoring_site/static/admin/js/vendor/select2/i18n/zh-TW.js
+tutoring_site/static/admin/js/vendor/xregexp/LICENSE-XREGEXP.txt
+tutoring_site/static/admin/js/vendor/xregexp/xregexp.js
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/static/admin/img/README.txt
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
+tutoring_site/tutoring_site/__pycache__/secret.cpython-35.pyc
